# pvfinder_cuda_inference

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  data_loader.hpp  inference.hpp  model.hpp  npy_loader.hpp  pvs.hpp
include/layers/: activation.hpp  conv.hpp  deconv.hpp  linear.hpp  pooling.hpp
python/: convert_weights.py  npy.ipynb
src/: cudnn_handle.cu  data_loader.cu  inference.cu  model.cu  pvs.cu
src/layers/: activation.cu  conv.cu  deconv.cu  linear.cu  pooling.cu
